Fix horizontal overflow on AI chat demo

--- a/pages/chat.module.scss
+++ b/pages/chat.module.scss
@@ -9,5 +9,5 @@
 .chatContainer {
   min-height: 500px;
   max-height: 90vh;
-  width: 700px;
+  width: min(700px, 90vw);
 }
